# GCP-Data-Pipelines-DX

./: .gitignore  Dockerfile  README.md  dependencies-setup.sh  docker-compose.yml  setup.py
cloud_functions/forecast/assignments/: main.py  pyproject.toml
cloud_functions/forecast/assignments_filled/: main.py  pyproject.toml
cloud_functions/forecast/people/: main.py  pyproject.toml
cloud_functions/forecast/placeholders/: main.py
cloud_functions/forecast/projects/: main.py  pyproject.toml
cloud_functions/harvest/clients/: main.py  pyproject.toml
cloud_functions/harvest/expenses/: main.py  pyproject.toml
cloud_functions/harvest/projects/: main.py  pyproject.toml
cloud_functions/harvest/reports/: main.py  pyproject.toml
cloud_functions/harvest/timesheet/: main.py  pyproject.toml  requirements.txt
cloud_functions/harvest/timesheet_data_lake/: main.py  pyproject.toml
cloud_functions/harvest/timesheets_filled/: main.py  pyproject.toml
cloud_functions/harvest/user_project_assignments/: main.py  pyproject.toml  requirements.txt
cloud_functions/harvest/users/: main copy.py  main.py  pyproject.toml  requirements.txt
cloud_functions/helpers/months_columns/: main.py  pyproject.toml
cloud_functions/hibob/time_off/: main.py  pyproject.toml
cloud_functions/hubspot/deals/: main.py  pyproject.toml
cloud_functions/hubspot/deals_stages/: main.py  pyproject.toml
cloud_functions/hubspot/pipeline/: README.md  main.py  pyproject.toml
cloud_functions/hubspot/webhook/: main.py
cloud_functions/pipedrive/deals/: main.py  pyproject.toml
cloud_functions/pipedrive/organisations/: main.py  pyproject.toml
cloud_functions/runn/actuals/: main.py  pyproject.toml  requirements.txt
cloud_functions/runn/assignments/: main.py  requirements.txt
cloud_functions/runn/assignments_new/: main.py
cloud_functions/runn/assignments_split_by_day/: main.py  requirements.txt
cloud_functions/runn/clients/: main.py
cloud_functions/runn/contracts/: main.py
cloud_functions/runn/people/: main.py  pyproject.toml
cloud_functions/runn/projects/: README.md  main.py  pyproject.toml  requirements.txt
cloud_functions/runn/public_holidays/: main.py  pyproject.toml
cloud_functions/runn/rate_cards/: README.md  main.py
cloud_functions/runn/roles/: main.py
cloud_functions/runn/teams/: main.py
data-pipeline-tools/: setup.py
data_pipeline_tools/: asyncs.py  auth.py  bigquery_helpers.py  forecast_tools.py  headers.py  holidays.py  pyproject.toml  runn_tools.py  setup.py  state.py  util.py
terraform/environments/bigquery/: backend.tf  harvest_processed.tf  kms.tf
terraform/environments/bigquery/queries/: harvest_processed_master2.sql
terraform/environments/infra/: backend.tf  bigquery_datasets.tf  bigquery_tables_forecast.tf  bigquery_tables_harvest.tf  bigquery_tables_helpers.tf  bigquery_tables_hibob.tf  bigquery_tables_hubspot.tf  bigquery_tables_pipedrive.tf  bigquery_tables_runn.tf  bigquery_tables_state.tf  functions_forecast.tf  functions_harvest.tf  functions_helpers.tf  functions_hibob.tf  functions_pipedrive.tf  functions_runn.tf  funtions_hubspot.tf  iam.tf  kms.tf  scheduled_queries.tf  trigger.tf  variables.tf
terraform/environments/infra/queries/: runn_clients_normalised.sql  runn_people_normalised.sql  runn_projects_normalised.sql
terraform/environments/main/: backend.tf  bigquery_datasets.tf  bigquery_tables_forecast.tf  bigquery_tables_harvest.tf  bigquery_tables_helpers.tf  bigquery_tables_hibob.tf  bigquery_tables_pipedrive.tf  functions_forecast.tf  functions_harvest.tf  main.tf  trigger.tf  variables.tf
