[tool.poetry]
name = "timesheets-filled"
version = "0.1.0"
description = ""
authors = ["urquha <andy.urquhart@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "timesheets_filled"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
google-cloud-core = "^2.3.2"
google-cloud-bigquery = "^3.5.0"
google-cloud-secret-manager = "^2.15.1"
pyarrow = "^11.0.0"
pandas-gbq = "^0.19.1"
pyforecast = { git = 'https://github.com/urquha/py_forecast', branch = "master" }
holidays = "^0.20"
data_pipeline_tools = { git = "https://github.com/tpximpact/GCP-Data-Pipelines.git", branch = "main" }
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
