[tool.poetry]
name = "months-table"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "months_table"}]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-core = "^2.3.2"
google-cloud-bigquery = "^3.5.0"
google-cloud-secret-manager = "^2.15.1"
pyarrow = "^11.0.0"
pandas-gbq = "^0.19.1"
data_pipeline_tools = { git = "https://github.com/tpximpact/GCP-Data-Pipelines.git", branch = "main" }
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
