[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pandas-gbq = "^0.23.1"
google-cloud-core = "^2.4.1"
google-cloud-bigquery = "^3.25.0"
google-cloud-secret-manager = "^2.20.0"
data_pipeline_tools = { git = "https://github.com/tpximpact/GCP-Data-Pipelines-DX.git", branch = "feature/code-refactor" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
